Demo application transformed into a test.